[tool.poetry]
name = "repl_python3_ChristianBot"
version = "0.1.0"
description = "This is ChristianBot. I hope you enjoy it!"
authors = ["S.J. <dont.be.gullible@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
